# specification

./: 404.html  CNAME  README.md  Specification.xmind  index.html  index.md_origin  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
changelog/: index.html
creating-your-site/: index.html
customization/: index.html
data-privacy/: index.html
deprecations/: index.html
docs/: index.md
docs/reference/: code-blocks.md
getting-started/: index.html
insiders/: index.html
license/: index.html
publishing-your-site/: index.html
reference/admonitions/: index.html
reference/buttons/: index.html
reference/code-blocks/: index.html
reference/content-tabs/: index.html
reference/footnotes/: index.html
reference/formatting/: index.html
reference/icons-emojis/: index.html
reference/images/: index.html
reference/lists/: index.html
reference/mathjax/: index.html
reference/meta-tags/: index.html
search/: search_index.json
setup/adding-a-comment-system/: index.html
setup/adding-a-git-repository/: index.html
setup/adding-social-links/: index.html
setup/changing-the-colors/: index.html
setup/changing-the-fonts/: index.html
setup/changing-the-language/: index.html
setup/changing-the-logo-and-icons/: index.html
setup/setting-up-navigation/: index.html
setup/setting-up-site-analytics/: index.html
setup/setting-up-site-search/: index.html
troubleshooting/: index.html
upgrading/: index.html
